src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__generated_files@src__generated__shader_atlas__watercolor_common.rs.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: src/generated/shader_atlas/watercolor_common.rs
---
// GENERATED FILE (do not edit directly)

//! shared types from slang module: watercolor_common.slang

use serde::Serialize;

use crate::renderer::gpu_write::GPUWrite;


#[derive(Debug, Clone, Serialize)]
#[repr(C, align(16))]
pub struct SimParams {
    pub delta_time: f32,
    pub _padding_0: [u8; 12],
}

impl GPUWrite for SimParams {}
const _: () = assert!(std::mem::size_of::<SimParams>() == 16);
